clients/python/agentic-sandbox-client/gateway/gateway-contour.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: contour
  namespace: default
spec:
  controllerName: projectcontour.io/gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: contour-gateway
  namespace: default
spec:
  gatewayClassName: contour
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
        namespaces:
          from: All
---
# The HTTPRoute to connect the Gateway to the router service.
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: sandbox-router-route
  namespace: default #default
spec:
  parentRefs:
  - name: contour-gateway # This must match the name of the Gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: sandbox-router-svc # Route all traffic to the router service
      port: 8080
